RESOLVED FIXED238448
Accessing WebGL content crashes in macOS Recovery OS, workaround 2
https://bugs.webkit.org/show_bug.cgi?id=238448
Summary Accessing WebGL content crashes in macOS Recovery OS, workaround 2
Kimmo Kinnunen
Reported 2022-03-28 05:16:42 PDT
Accessing WebGL content crashes in macOS Recovery OS, workaround 2
Attachments
Patch (4.29 KB, patch)
2022-03-28 05:34 PDT, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (4.29 KB, patch)
2022-03-28 05:55 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-03-28 05:17:21 PDT
Kimmo Kinnunen
Comment 2 2022-03-28 05:34:43 PDT
Kimmo Kinnunen
Comment 3 2022-03-28 05:55:31 PDT
EWS
Comment 4 2022-03-28 12:41:12 PDT
Committed r291983 (248942@main): <https://commits.webkit.org/248942@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455908 [details].
Note You need to log in before you can comment on or make changes to this bug.