Accessing WebGL content crashes in macOS Recovery OS, workaround 2 https://bugs.webkit.org/show_bug.cgi?id=238448

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-03-28
Reviewed by Dean Jackson.

Add a two new quick workarounds to try fix a recovery OS crash when
WebKit tries to use ANGLE that is not present in the OS image.
Compare explicitly against NULL as instructed in weak linking documentation.
Check for the EGL_GetPlatformDisplayEXT, this is nullptr in the
recovery OS.

Remove the previous workaround. The environment variable is
not available in WP or GPUP. The Metal symbol is not the problem.

* platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::platformSupportsMetal):
(WebCore::initializeEGLDisplay):


Canonical link: https://commits.webkit.org/248942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291983 268f45cc-cd09-0410-ab3c-d52691b4dbfc